jersey http pool added